# misis2024s-23-09-gumirov-m-r

./: .gitignore  CMakeLists.txt  README.md  codeforces.id  reports.md  status.md
prj.codeforces/: 0004a.cpp  0041a.cpp  0050a.cpp  0071a.cpp  0136b.cpp  0231a.cpp  0267a.cpp  0313b.cpp  0339b.cpp  0520a.cpp  0546a.cpp  0558a.cpp  0747b.cpp  0767a.cpp  0768a.cpp  0879b.cpp  0886b.cpp  0967b.cpp  1005a.cpp  1017a.cpp  1054a.cpp  1077a.cpp  1081a.cpp  1143a.cpp  1200a.cpp  1354a.cpp  1385a.cpp  1418a.cpp  1519a.cpp  1559a.cpp  1619b.cpp  1703a.cpp  1730a.cpp  1850a.cpp  1850b.cpp  1850c.cpp  1850d.cpp  1873c.cpp  1873d.cpp  1932a.cpp  (+3 more)
prj.cw/: CMakeLists.txt
prj.lab/: CMakeLists.txt
prj.lab/binarysearchtree/: CMakeLists.txt  binarysearchtree.cpp  binarysearchtree.hpp
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/customcontainer/: CMakeLists.txt  customcontainer.cpp  customcontainer.hpp
prj.lab/dynarr/: CMakeLists.txt  dynarr.cpp  dynarr.hpp  pusto.cpp
prj.lab/dynarrt/: CMakeLists.txt  dynarrt.hpp
prj.lab/hashtable/: CMakeLists.txt  hashtable.hpp
prj.lab/istack/: CMakeLists.txt  istackarrt.hpp  istackbase.hpp  istacklstt.hpp
prj.lab/mathvector/: CMakeLists.txt  mathvector.cpp  mathvector.hpp
prj.lab/queuearr/: CMakeLists.txt  queuearr.cpp  queuearr.hpp
prj.lab/queuearrt/: CMakeLists.txt  queuearrt.hpp
prj.lab/queuelst/: CMakeLists.txt  queuelst.cpp  queuelst.hpp
prj.lab/queuelstpr/: CMakeLists.txt  queuelstpr.cpp  queuelstpr.hpp
prj.lab/queuelstprt/: CMakeLists.txt  queuelstprt.hpp
prj.lab/queuelstt/: CMakeLists.txt  queuelstt.hpp
prj.lab/rational/: rational.cpp  rational.hpp
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.hpp
prj.lab/stackarrt/: CMakeLists.txt  stackarrt.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.hpp
prj.lab/stacklstt/: CMakeLists.txt  stacklstt.hpp
prj.lab/template_stackarr/: CMakeLists.txt
prj.lab/template_stacklst/: CMakeLists.txt
prj.test/: CMakeLists.txt  doctest.h  test_binarysearchtree.cpp  test_complex.cpp  test_customcontainer.cpp  test_dynarr.cpp  test_dynarrt.cpp  test_hashtable.cpp  test_istackarrt.cpp  test_istacklstt.cpp  test_mathvector.cpp  test_queuearr.cpp  test_queuearrt.cpp  test_queuelst.cpp  test_queuelstpr.cpp  test_queuelstprt.cpp  test_queuelstt.cpp  test_rational.cpp  test_stackarr.cpp  test_stackarrt.cpp  test_stacklst.cpp  test_stacklstt.cpp  unittest.hpp
