set(CMAKE_CXX_STANDARD 20)

add_executable(0520a 0520a.cpp)
add_executable(0747b 0747b.cpp)
add_executable(0768a 0768a.cpp)
add_executable(0886b 0886b.cpp)
add_executable(0967b 0967b.cpp)
add_executable(1017a 1017a.cpp)
add_executable(1200a 1200a.cpp)
add_executable(0267a 0267a.cpp)
add_executable(1005a 1005a.cpp)
add_executable(1077a 1077a.cpp)
add_executable(1081a 1081a.cpp)
add_executable(1143a 1143a.cpp)
add_executable(1354a 1354a.cpp)
add_executable(1385a 1385a.cpp)
add_executable(1418a 1418a.cpp)
add_executable(1519a 1519a.cpp)
add_executable(1619b 1619b.cpp)