set(CMAKE_CXX_STANDARD 20)

add_executable(0004a 0004a.cpp)
add_executable(0041a 0041a.cpp)
add_executable(0050a 0050a.cpp)
add_executable(0071a 0071a.cpp)
add_executable(0136b 0136b.cpp)
add_executable(0231a 0231a.cpp)
add_executable(0267a 0267a.cpp)
add_executable(0313b 0313b.cpp)
add_executable(0339b 0339b.cpp)
add_executable(0520a 0520a.cpp)
add_executable(0546a 0546a.cpp)
add_executable(0558a 0558a.cpp)
add_executable(0747b 0747b.cpp)
add_executable(0767a 0767a.cpp)
add_executable(0768a 0768a.cpp)
add_executable(0879b 0879b.cpp)
add_executable(0886b 0886b.cpp)
add_executable(0967b 0967b.cpp)
add_executable(1005a 1005a.cpp)
add_executable(1017a 1017a.cpp)
add_executable(1054a 1054a.cpp)
add_executable(1077a 1077a.cpp)
add_executable(1081a 1081a.cpp)
add_executable(1143a 1143a.cpp)
add_executable(1200a 1200a.cpp)
add_executable(1354a 1354a.cpp)
add_executable(1385a 1385a.cpp)
add_executable(1418a 1418a.cpp)
add_executable(1519a 1519a.cpp)
add_executable(1559a 1559a.cpp)
add_executable(1619b 1619b.cpp)
add_executable(1703a 1703a.cpp)
add_executable(1730a 1730a.cpp)
add_executable(1850a 1850a.cpp)
add_executable(1850b 1850b.cpp)
add_executable(1850c 1850c.cpp)
add_executable(1850d 1850d.cpp)
add_executable(1873c 1873c.cpp)
add_executable(1873d 1873d.cpp)
add_executable(1932a 1932a.cpp)
add_executable(1950a 1950a.cpp)
add_executable(1950c 1950c.cpp)